fix JME input overlapping preview
needed "display:inline-block" in preview's CSS so it has the right bounding box.
fixes point 1 of #29

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -10,6 +10,8 @@ html{
 
 #preview {
 	font-family: serif;
+	display: inline-block;
+	font-size: 120%;
 }
 
 .btn{
